fix: Dropdown for Arrowheads overflow (#2596)

--- a/src/components/IconPicker.scss
+++ b/src/components/IconPicker.scss
@@ -93,6 +93,9 @@
     grid-auto-flow: column;
     grid-gap: 0.5rem;
     border-radius: 4px;
+    :root[dir="rtl"] & {
+      padding: 0.4rem;
+    }
   }
 
   .picker-keybinding {
